# g-branches

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/g_branches/: __init__.py  __main__.py  cli.py  exceptions.py  git_operations.py  models.py  ui.py
tests/: __init__.py  conftest.py  test_cli.py  test_git_operations.py  test_models.py
